<resources>
    <string name="app_name">NASA Final Project</string>
    <string name="main_title">NASA Image Search (v.1)</string>
    <string name="text_hint">Select a date</string>
    <string name="textView_date">"Date: "</string>
    <string name="textView_fill">no results</string>
    <string name="textView_url">"URL: "</string>
    <string name="textView_hdUrl">"HD URL: "</string>
    <string name="saveBtn">Download Image</string>
    <string name="pickDate">Pick a date</string>
    <string name="textView_title">"Title: "</string>
    <string name="textView_explanation">"Info: "</string>
    <string name="nav_home">Home</string>
    <string name="nav_images">My Images</string>
    <string name="nav_help">Help</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_share">Share</string>
    <string name="tableCol_title">Title</string>
    <string name="tableCol_date">Date</string>
    <string name="listPage_title">My Images (v.1)</string>
    <string name="trash">Delete item</string>
    <string name="textView_desc">"Description: "</string>
    <string name="details_title">Details Page (v.1)</string>

</resources>